2001-01-24  Mark Mitchell  <mark@codesourcery.com>

	* config/os/aix/bits/atomicity.h (__compare_and_swap): Remove.
	(__always_swap): Likewise.

2001-01-23  Chris Demetriou  <cgd@broadcom.com>

	* libsupc++/exception_support.cc (__terminate_func): Remove
	declaration.
	(__terminate_func_ptr): New typedef.
	(__terminate, __terminate_set_func): New extern function
	prototypes.
	(std::terminate): Use __terminate function.
	(std::set_terminate): Use __terminate_set_func function.

2001-01-23  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.target: Just use os_include_dir always.
	* configure.in: Remove calls to GLIBCPP_CHECK_CTYPE_SUPPORT.
	Link atomicity files and ctype files here.
	* configure: Regenerate.
	* acinclude.m4 (GLIBCPP_CHECK_CTYPE_SUPPORT): Remove.
	(GLIBCPP_ENABLE_ATOMICITY): Remove.
	* aclocal.m4: Regenerate.
	
2001-01-23  Chris Demetriou  <cgd@broadcom.com>

	* configure.in: Place definition of MULTISUBDIR in
	libsupc++/Makefile as is done for src/Makefile.
	* configure: Regenerate.

2001-01-23  Phil Edwards  <pme@sources.redhat.com>

	* acinclude.m4:  Cosmetic changes only.
	* aclocal.m4:  Regenerated.
	* configure:  Regenerated.
	* configure.target:  Update documented list of changed variables.
	* docs/html/install.html:  Fix typo.
	* docs/html/20_util/howto.html:  More notes on auto_ptr.
	* docs/html/27_io/howto.html:  More notes on streabufs.
	* docs/html/faq/index.html:  Add rel_ops problem and mention the
	  DEC as(1) .subsection difficulty.
	* docs/html/faq/index.txt:  Regenerated.

2001-01-23  Mark Mitchell  <mark@codesourcery.com>

        * ainclude.m4 (GLIBCPP_CHEC_MATH_DECLS_AND_LINKAGE_1): New macro.
        (GLIBCPP_CHECK_MATH_SUPPORT): Use it.
        (GLIBCPP_CHECK_TYPE_SUPPORT): Don't autoconf ctype information if
        its already provided in config.target.
        * aclocal.m4: Regenerated.
        * configure: Likewise.
        * configure.target: Set ctype_include_dir for lots of systems.