@@ -1,3 +1,15 @@
+2001-01-25  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* testsuite/27_io/*.cc: Remove explicit reference to 'testsuite/'
+	in testcases.  Prepare for the DejaGnu based framework.
+	* mkcheck.in: Adjust call to tests_flags.  Don't mmkdir testsuite
+	directory -- it is now mkcheck working directory.
+	* tests_flags.in: Remove reference to $(top_srcdir).  Use
+	${SRC_DIR} instead.
+	* Makefile.am (check, check-install): Change mkcheck invocation
+	logic. 
+	* Makefile.in: Regenerate.
+
 2001-01-24  Mark Mitchell  <mark@codesourcery.com>
 
 	* config/os/aix/bits/atomicity.h (__compare_and_swap): Remove.
